crash when loading a file that contains a custom node tree #48980

Closed
opened 2016-07-31 12:53:56 +02:00 by Jacques Lucke · 8 comments
Member

System Information
Windows 10 64 bit
Ubuntu 64 bit

Blender Version
Broken: latest buildbot 01d5d28

Short description of error
Blender crashes when I load a file that contains a custom node tree.

Exact steps for others to reproduce the error

  1. Install this addon, activate it and save userprefs: BuggyNodeTree.py
  2. Switch to the node editor and create a new node tree of the custom tree type ("error" icon)
  3. Save the file.
  4. Restart Blender.
  5. Open the file -> crash
**System Information** Windows 10 64 bit Ubuntu 64 bit **Blender Version** Broken: latest buildbot 01d5d28 **Short description of error** Blender crashes when I load a file that contains a custom node tree. **Exact steps for others to reproduce the error** 1. Install this addon, activate it and save userprefs: [BuggyNodeTree.py](https://archive.blender.org/developer/F330358/BuggyNodeTree.py) 2. Switch to the node editor and create a new node tree of the custom tree type ("error" icon) 3. Save the file. 4. Restart Blender. 5. Open the file -> crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Member

Tested it on newest master running on an i7, 16gb ram, 2*gtx 560 ti oc 2GB on Linux64 - can confirm it. It crashes in 9 of 10 tries here. Does not crash on Blender 2.77a.

Tested it on newest master running on an i7, 16gb ram, 2*gtx 560 ti oc 2GB on Linux64 - can confirm it. It crashes in 9 of 10 tries here. Does not crash on Blender 2.77a.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-07-31 19:16:39 +02:00

Own fault, bisect goes to 018d336cbd…

Own fault, bisect goes to 018d336cbd…

This issue was referenced by 36a790653c

This issue was referenced by 36a790653c01809546ae2db9f9a56123f2dfdec7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48980
No description provided.